--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "animate.css": "^4.1.1",
     "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
